--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -55,7 +55,8 @@ RUN curl -fsSL -v -k -o ~/miniforge.sh -O https://github.com/conda-forge/minifor
         pyyaml \
         setuptools \
         jemalloc \
-        openssl \      
+        openssl \ 
+        pip==24.3.1 \
         weasyprint && \
     /opt/conda/bin/conda clean -ya && \
     # Fix GLIBCXX version issue
